--- a/index_supplementary.html
+++ b/index_supplementary.html
@@ -849,3 +849,72 @@
       </div>
     </div>
   </div>
+
+
+  <div class="columns is-centered m-6">
+    <div class="column is-full has-text-centered content">
+      <h2 class="title is-3">Response Stages Examples</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/Gemini_safety-critical_misperception.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <!-- <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/safety_critical_misperception.png" alt="" width="60%"/>
+          </div>
+        </div> -->
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/safety_critical_misperception_2.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_1.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_2.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_3.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_4.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_5.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_6.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_7.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_8.png" alt="" width="60%"/>
+          </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/results-examples/location_9.png" alt="" width="60%"/>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
