--- a/index.html
+++ b/index.html
@@ -131,18 +131,26 @@
             <span class="author-block"><sup style="color:#6fbf73;">1</sup>University of California, Los Angeles,</span><br>
             <span class="author-block"><sup style="color:#ed4b82">2</sup>University of Maryland, College Park,</span>
             <span class="author-block"><sup style="color:#ffac33">3</sup>The Pennsylvania State University</span><br>
-            <span class="author-block">* Equal contribution</span>
-            <!-- <span class="paper-block"><b style="color:#f41c1c">ICLR 2024 Oral</b> (85 in 7304, 1.2%)</span> -->
+            <span class="author-block">* Equal contribution</span><br>
+            <span class="paper-block">
+            <a href="https://hgzhou42.wixsite.com/turningpoint" target="_blank" rel="external">
+              <img class="center-block org-banner" src="static/images/TurningPoint_transparent_cropped.png" style="height:10em">
+            </a>
+            </span>
           </div>
 
-          <div class="is-size-5 publication-authors">
+          <!-- <div class="is-size-5 publication-authors">
             <span class="author-block">
               <strong><span style="font-size: 1.5em; color: crimson;">A</span></strong>IGC
               <strong><span style="font-size: 1.5em; color: crimson;">R</span></strong>esearch
               <strong><span style="font-size: 1.5em; color: crimson;">C</span></strong>ollaboration
             </span>
-          </div>
-
+          </div> -->
+          <!-- <div class="section" id="org-banners" style="display:fle">
+            <a href="https://hgzhou42.wixsite.com/turningpoint" target="_blank" rel="external">
+              <img class="center-block org-banner" src="static/images/TurningPoint_transparent_cropped.png" style="height:15em">
+            </a>
+          </div> -->
         
           <!-- <section> -->
             <!-- <div class="section" id="org-banners" style="display:fle">
