Feat: updated link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <!-- PDF Link. -->
               <span class="link-block">
                 <!-- @PAN TODO: change links -->
-                <a href="https://arxiv.org/pdf/2310.02255.pdf"
+                <a href="https://arxiv.org/pdf/2406.17806.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -180,7 +180,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2310.02255"
+                <a href="https://arxiv.org/abs/2406.17806"
                    class="external-link button is-normal is-rounded is-dark">
                 <!-- <a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf"
                    class="external-link button is-normal is-rounded is-dark"> -->
@@ -233,7 +233,7 @@
                 </a>
               </span>
               <!-- Leaderboard Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://xirui-li.github.io/MOSSBench/#leaderboard"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -241,7 +241,7 @@
                   </span>
                   <span>Leaderboard</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Twitter Link. -->
               <span class="link-block">
                 <a href="https://x.com/xiruili7_li/status/1762996532926947659"
@@ -652,17 +652,20 @@
 
 
 <!-- @PAN TODO: bibtex -->
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
-    <pre><code>@inproceedings{lu2024mathvista,
-  author    = {Lu, Pan and Bansal, Hritik and Xia, Tony and Liu, Jiacheng and Li, Chunyuan and Hajishirzi, Hannaneh and Cheng, Hao and Chang, Kai-Wei and Galley, Michel and Gao, Jianfeng},
-  title     = {MathVista: Evaluating Mathematical Reasoning of Foundation Models in Visual Contexts},
-  booktitle={International Conference on Learning Representations (ICLR)},
-  year      = {2024}
+    <pre><code>@misc{li2024mossbenchmultimodallanguagemodel,
+      title={MOSSBench: Is Your Multimodal Language Model Oversensitive to Safe Queries?}, 
+      author={Xirui Li and Hengguang Zhou and Ruochen Wang and Tianyi Zhou and Minhao Cheng and Cho-Jui Hsieh},
+      year={2024},
+      eprint={2406.17806},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2406.17806}, 
 }</code></pre>
   </div>
-</section> -->
+</section>
 
 <section>
   <div class="section" id="org-banners" style="display:flex">
