feat: new feats

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </h2>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://lupantech.github.io/">Xirui Li</a><sup style="color:#6fbf73;">1</sup><sup>*</sup>,</span>
+              <a href="https://xirui-li.github.io/">Xirui Li</a><sup style="color:#6fbf73;">1</sup><sup>*</sup>,</span>
             <span class="author-block">
               <a href="https://hengguangzhou.github.io/">Hengguang Zhou</a><sup style="color:#6fbf73;">1</sup><sup>*</sup>,</span>
             <span class="author-block">
