--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <span class="author-block"><sup style="color:#ffac33">3</sup>The Pennsylvania State University</span><br>
             <span class="author-block">* Equal contribution</span><br>
             <span class="paper-block">
-            <a href="https://hgzhou42.wixsite.com/turningpoint" target="_blank" rel="external">
+            <a href="https://turningpointai.wixsite.com/home" target="_blank" rel="external">
               <img class="center-block org-banner" src="static/images/TurningPoint_transparent_cropped.png" style="height:10em">
             </a>
             </span>
@@ -147,7 +147,7 @@
             </span>
           </div> -->
           <!-- <div class="section" id="org-banners" style="display:fle">
-            <a href="https://hgzhou42.wixsite.com/turningpoint" target="_blank" rel="external">
+            <a href="https://turningpointai.wixsite.com/home" target="_blank" rel="external">
               <img class="center-block org-banner" src="static/images/TurningPoint_transparent_cropped.png" style="height:15em">
             </a>
           </div> -->
