--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup style="color:#6fbf73;">1</sup>University of California, Los Angeles,</span><br>
-            <span class="author-block"><sup style="color:#ed4b82">2</sup>University of Maryland, College Park,</span>
-            <span class="author-block"><sup style="color:#ffac33">3</sup>The Pennsylvania State University</span><br>
+            <span class="author-block"><sup style="color:#ffac33">2</sup>The Pennsylvania State University</span><br>
+            <span class="author-block"><sup style="color:#ed4b82">3</sup>University of Maryland, College Park,</span><br>
             <span class="author-block">* Equal contribution</span><br>
             <span class="paper-block">
             <a href="https://turningpoint-ai.com" target="_blank" rel="external">
@@ -242,7 +242,7 @@
               </span> -->
               <!-- Twitter Link. -->
               <span class="link-block">
-                <a href="https://x.com/xiruili7_li/status/1762996532926947659"
+                <a href="https://x.com/TurningPointAI/status/1807169697571553574"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <!-- <i class="far fa-images"></i> -->
